<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jairo.notemanager.AddNote"
    tools:showIn="@layout/activity_add_note">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_form_title"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_form_title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_form_description"
      />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/hint_form_description"
  />

    <Button
        android:id="@+id/buttonAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_form_addNote"
         />

        <Button
            android:id="@+id/buttonDeleteNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_form_delteNote"
            android:enabled="false"
            android:visibility="invisible"
                />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
